get mock projList works fine

--- a/src/shared/ui/badgeItem/BadgeItem.module.scss
+++ b/src/shared/ui/badgeItem/BadgeItem.module.scss
@@ -38,7 +38,7 @@ $badgeDefaultSize: 48px;
   }
 
   .iconContainer {
-    color: red; // Настройте цвет под ваш дизайн
+    color: black; // Настройте цвет под ваш дизайн
     font-size: 1.25rem; // Настройте размер под ваш дизайн
     // @include rfs.font-size(1.25rem); // Раскомментируйте для адаптивности
   }
