--- a/src/pages/project/form/FieldsLayout.module.scss
+++ b/src/pages/project/form/FieldsLayout.module.scss
@@ -1,5 +1,6 @@
 .gridContainer {
   display: grid;
-  grid-template-columns: 50% 50%;
+  //grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr;
   gap: 5px;
 }
