--- a/src/pages/project/ProjectPage.module.scss
+++ b/src/pages/project/ProjectPage.module.scss
@@ -1,10 +1,3 @@
-.common {
-  //position: relative;
-  color: inherit;
-  //display: flex;
-  //flex-direction: column;
-  //height: 100vh;
-}
 
 .layout {
   display: flex;
@@ -25,7 +18,7 @@
 .content {
   //overflow-y: unset;
   flex: 1;
-  padding: 20px;
+  padding-inline: 20px;
 }
 
 .sidebar {
